--- a/tesla-clone-yt/src/Header.css
+++ b/tesla-clone-yt/src/Header.css
@@ -3,13 +3,14 @@
     display: grid;
     grid-template-columns: 1fr 2fr 0.5fr;
     position: sticky;
-    z-index: 70;
+    z-index: 700;
     top:0;
     left: 0;
     right: 0;
     align-items: center;
     padding: 29px;
     padding-top: 20px;
+   background-color: whitesmoke;
 }
 .header_logo
 {
@@ -33,17 +34,21 @@
     text-decoration: none;
     color: black;
     font-weight: 400;
+
 }
  .header_links > a 
  {
     text-decoration: none;
     color: black;
+    display: grid;
+    padding: 3px;
+    gap: 20px;
     font-weight: 400;
+    font-family:Georgia, 'Times New Roman', Times, serif
  }
-
+.header_links > a:hover {
+ background-color: slategray;
+}
  .header-link-hidden{
     visibility: hidden;
- }
- .header_menu {
-    z-index: 50;
  }
