--- a/tesla-clone-yt/src/Login.css
+++ b/tesla-clone-yt/src/Login.css
@@ -1,10 +1,8 @@
-.login_logo > a >img{
-    width: 10%;
-}
-.login {
-    padding: 2%;
-}
-.login_header {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+
+
+.main-container
+{
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
 }
