--- a/tesla-clone-yt/src/Models/Model.css
+++ b/tesla-clone-yt/src/Models/Model.css
@@ -4,12 +4,15 @@
     background-position: center;
     height: 130vh;
     background-size: cover;
+    margin-bottom: -1%;
 }
 .s-img2 > img {
     width: 100%;
     background-position: center;
     height: 130vh;
     background-size: cover;
+    margin-bottom: -1%;
+
 }
 .s-img3 > img {
     width: 100%;
@@ -20,8 +23,30 @@
 .model-s-part1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 27px;
 }
 .model-s-part2 {
     display: grid;
+    padding-top: 10%;
     grid-template-columns: 1fr 1fr;
+    gap: 27px;
+}
+.model-s-partition {
+    padding: 12% 14%;
+    background-color: black;
+    color: white;
+}
+.s-img11 > img {
+    width: 90%;
+}
+.s-img22 > img {
+    width: 90%;
+}
+.text
+{
+    text-align: center;
+    font-size: 35px;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    padding: 4%;
 }
